--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Picture in Picture</title>
     <link rel="icon" type="image/png" href="https://google.com/s2/favicons?domain=jacinto.design">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello, world</h1>
-
+    <video id="video" controls width="640" height="320" controls hidden></video>
+    <div class="button-container" id="button-container">
+        <button id="button">Start</button>
+    </div>
+    
 
 
     <script src="script.js"></script>
